src/spaceExGrammar/Syntax.java
/* Generated By:JavaCC: Do not edit this line. Syntax.java */
package spaceExGrammar;

public class Syntax implements SyntaxConstants {


        public static void main(String args[]) throws Exception
        {
        }

//Grammer Description //
  final public void expr() throws ParseException {
    term();
    label_1:
    while (true) {
      if (jj_2_1(5)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(5)) {
        jj_consume_token(PLUS);
      } else if (jj_2_3(5)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
    }
  }

  final public void term() throws ParseException {
    factor();
    label_2:
    while (true) {
      if (jj_2_4(5)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_5(5)) {
        jj_consume_token(TIMES);
      } else if (jj_2_6(5)) {
        jj_consume_token(DIVIDE);
      } else if (jj_2_7(5)) {
        jj_consume_token(EXP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      factor();
    }
  }

  final public void factor() throws ParseException {
    if (jj_2_8(5)) {
      element();
    } else if (jj_2_9(5)) {
      function();
      jj_consume_token(LPAR);
      expr();
      jj_consume_token(RPAR);
    } else if (jj_2_10(5)) {
      param();
    } else if (jj_2_11(5)) {
      jj_consume_token(LPAR);
      expr();
      jj_consume_token(RPAR);
    } else if (jj_2_12(5)) {
      jj_consume_token(MINUS);
      factor();
    } else if (jj_2_13(5)) {
      jj_consume_token(POW);
      jj_consume_token(LPAR);
      jj_consume_token(EXP);
      jj_consume_token(COMMA);
      jj_consume_token(EXP);
      jj_consume_token(RPAR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void function() throws ParseException {
    if (jj_2_14(5)) {
      jj_consume_token(SIN);
    } else if (jj_2_15(5)) {
      jj_consume_token(COS);
    } else if (jj_2_16(5)) {
      jj_consume_token(TAN);
    } else if (jj_2_17(5)) {
      jj_consume_token(ASIN);
    } else if (jj_2_18(5)) {
      jj_consume_token(ACOS);
    } else if (jj_2_19(5)) {
      jj_consume_token(ATAN);
    } else if (jj_2_20(5)) {
      jj_consume_token(EXPO);
    } else if (jj_2_21(5)) {
      jj_consume_token(LOG);
    } else if (jj_2_22(5)) {
      jj_consume_token(LOG10);
    } else if (jj_2_23(5)) {
      jj_consume_token(SQRT);
    } else if (jj_2_24(5)) {
      jj_consume_token(FABS);
    } else if (jj_2_25(5)) {
      jj_consume_token(FLOOR);
    } else if (jj_2_26(5)) {
      jj_consume_token(CEIL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void lassign() throws ParseException {
    assign();
    label_3:
    while (true) {
      if (jj_2_27(5)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_28(5)) {
        jj_consume_token(AND);
      } else if (jj_2_29(5)) {
        jj_consume_token(OR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      assign();
    }
    jj_consume_token(0);
  }

  final public void assign() throws ParseException {
    if (jj_2_30(5)) {
      jj_consume_token(ID);
      jj_consume_token(ASSIGNMENT);
      expr();
    } else if (jj_2_31(5)) {
      expbool();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void syntax() throws ParseException {
    expbool();
    jj_consume_token(0);
  }

  final public void expbool() throws ParseException {
    bool();
    label_4:
    while (true) {
      if (jj_2_32(5)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_33(5)) {
        jj_consume_token(OR);
      } else if (jj_2_34(5)) {
        jj_consume_token(AND);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      bool();
    }
  }

  final public void bool() throws ParseException {
    if (jj_2_35(5)) {
      jj_consume_token(TRUE);
    } else if (jj_2_36(5)) {
      jj_consume_token(FALSE);
    } else if (jj_2_37(5)) {
      cond();
    } else if (jj_2_38(5)) {
      jj_consume_token(LPAR);
      expbool();
      jj_consume_token(RPAR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void cond() throws ParseException {
    expr();
    if (jj_2_42(5)) {
      if (jj_2_39(5)) {
        jj_consume_token(GREATER);
      } else if (jj_2_40(5)) {
        jj_consume_token(EQUALEQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      expr();
    } else if (jj_2_43(5)) {
      jj_consume_token(LESSER);
      expr();
      if (jj_2_41(5)) {
        jj_consume_token(LESSER);
        expr();
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void element() throws ParseException {
    if (jj_2_44(5)) {
      jj_consume_token(CONSTANT);
    } else if (jj_2_45(5)) {
      jj_consume_token(MINUS);
      jj_consume_token(CONSTANT);
    } else if (jj_2_46(5)) {
      jj_consume_token(PLUS);
      jj_consume_token(CONSTANT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void param() throws ParseException {
    jj_consume_token(ID);
    if (jj_2_47(5)) {
      jj_consume_token(PRIME);
    } else {
      ;
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_3_20() {
    if (jj_scan_token(EXPO)) return true;
    return false;
  }

  private boolean jj_3_43() {
    if (jj_scan_token(LESSER)) return true;
    if (jj_3R_9()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_41()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_46() {
    if (jj_scan_token(PLUS)) return true;
    if (jj_scan_token(CONSTANT)) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(ATAN)) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(ACOS)) return true;
    return false;
  }

  private boolean jj_3_31() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_38() {
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(RPAR)) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_9()) return true;
    if (jj_scan_token(RPAR)) return true;
    return false;
  }

  private boolean jj_3_40() {
    if (jj_scan_token(EQUALEQUAL)) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(CEIL)) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(ASIN)) return true;
    return false;
  }

  private boolean jj_3_45() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_scan_token(CONSTANT)) return true;
    return false;
  }

  private boolean jj_3_37() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_29() {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  private boolean jj_3_34() {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(EXP)) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(POW)) return true;
    if (jj_scan_token(LPAR)) return true;
    if (jj_scan_token(EXP)) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(EXP)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(TAN)) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_scan_token(FLOOR)) return true;
    return false;
  }

  private boolean jj_3_47() {
    if (jj_scan_token(PRIME)) return true;
    return false;
  }

  private boolean jj_3_33() {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  private boolean jj_3_39() {
    if (jj_scan_token(GREATER)) return true;
    return false;
  }

  private boolean jj_3_32() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_42() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) return true;
    }
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3_36() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(DIVIDE)) return true;
    return false;
  }

  private boolean jj_3_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(COS)) return true;
    return false;
  }

  private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) {
    jj_scanpos = xsp;
    if (jj_3_46()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_44() {
    if (jj_scan_token(CONSTANT)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(ID)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_47()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_3R_8()) return true;
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_9()) return true;
    if (jj_scan_token(RPAR)) return true;
    return false;
  }

  private boolean jj_3_24() {
    if (jj_scan_token(FABS)) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_13()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_32()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_3R_9()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3_43()) return true;
    }
    return false;
  }

  private boolean jj_3_30() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ASSIGNMENT)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) return true;
    }
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(TIMES)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_35()) {
    jj_scanpos = xsp;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    }
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_35() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(SIN)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  private boolean jj_3_1() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(SQRT)) return true;
    return false;
  }

  private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_8() {
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3R_5() {
    if (jj_3R_6()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_4()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_3R_5()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_1()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(LOG10)) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(LOG)) return true;
    return false;
  }

  private boolean jj_3_41() {
    if (jj_scan_token(LESSER)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public SyntaxTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[47];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Syntax(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Syntax(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new SyntaxTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Syntax(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new SyntaxTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Syntax(SyntaxTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
